[gd_scene load_steps=10 format=3 uid="uid://cu5dcud24nhwd"]

[ext_resource type="Script" path="res://src/ocean_test.gd" id="1"]
[ext_resource type="Script" path="res://src/waves.gd" id="2"]
[ext_resource type="ArrayMesh" uid="uid://djd1vshxqmufs" path="res://src/utils/mesh_generator/polygon_mesh-1.res" id="3"]
[ext_resource type="PackedScene" uid="uid://dm7ijtt641f2u" path="res://src/SailBoat.tscn" id="4"]
[ext_resource type="Script" path="res://src/InterpolatedCamera.gd" id="4_r70pj"]
[ext_resource type="Script" path="res://src/camera_rotor.gd" id="6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_78osh"]
sky_horizon_color = Color(0.647059, 0.654902, 0.670588, 1)
ground_bottom_color = Color(0.647059, 0.654902, 0.670588, 1)
ground_horizon_color = Color(0.647059, 0.654902, 0.670588, 1)

[sub_resource type="Sky" id="Sky_y84yr"]
sky_material = SubResource("ProceduralSkyMaterial_78osh")

[sub_resource type="Environment" id="Environment_6hn8f"]
background_mode = 2
sky = SubResource("Sky_y84yr")
ambient_light_source = 3
reflected_light_source = 2

[node name="ocean_test_4" type="Node3D"]
script = ExtResource("1")
boat_path = NodePath("SailBoat")

[node name="env2" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6hn8f")

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.816007, -0.373725, -0.440979, -0.52982, 0.178519, 0.829109, -0.231136, 0.910198, -0.34368, -2.41206, 8.28774, 16.0721)

[node name="surface" type="MeshInstance3D" parent="."]
mesh = ExtResource("3")
script = ExtResource("2")
is_master = true

[node name="InterpolatedCamera" type="Camera3D" parent="." node_paths=PackedStringArray("target_node")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.9123, 1.47195, 0)
current = true
fov = 82.0
far = 500.0
script = ExtResource("4_r70pj")
target_node = NodePath("../camera_rootor/camera_target")

[node name="SailBoat" parent="." instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.19896, 0)

[node name="camera_rootor" type="Position3D" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("6")
camera_yaw = true
target_node = NodePath("camera_target")

[node name="camera_target" type="Position3D" parent="camera_rootor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.1171, 4.93198, 0)

[node name="right_target" type="Position3D" parent="camera_rootor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.1171, 4.93198, 2.05863)

[node name="left_target" type="Position3D" parent="camera_rootor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.117, 4.932, -2.059)
